Set float style to list bullets to avoid text wrapping after them

--- a/assets/core.styl
+++ b/assets/core.styl
@@ -75,6 +75,7 @@ resets(arr)
 
     > .ql-ui:before
       display: inline-block
+      float: left;
       margin-left: -1*LIST_STYLE_OUTER_WIDTH
       margin-right: LIST_STYLE_MARGIN
       text-align: right
